# trillek-client-core

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.ps1  build.sh  main.cxx  prebuild.ps1  prebuild.sh  trillek-client-core.vcxproj
docs/: Doxyfile
engine/: CMakeLists.txt
engine/Core/: CMakeLists.txt  Core.h
engine/Core/Class/: ClassBase.h
engine/Core/Misc/: AssertionMacros.cpp  AssertionMacros.h  Build.h  MetaMacros.h
engine/Core/Platform/: Platform.h  PlatformClasses.h
engine/Core/PlatformCommon/: CommonPlatform.h  CommonPlatformApplication.cpp  CommonPlatformApplication.h  CommonPlatformMisc.h  CommonPlatformWindow.cpp  CommonPlatformWindow.h
engine/Core/PlatformMac/: MacPlatform.h  MacPlatformApplication.h  MacPlatformApplication.mm  MacPlatformClasses.h  MacPlatformMisc.h  MacPlatformMisc.mm  MacPlatformWindow.h  MacPlatformWindow.mm
engine/core/: FakeSystem.h  System.h  Trillek.h  TrillekGame.cpp  TrillekGame.h  TrillekScheduler.cpp  TrillekScheduler.h
include/: AtomicMap.hpp  AtomicQueue.hpp  FakeSystem.h  OS.h  Property.h  System.h  Trillek.h  TrillekAllocator.hpp  TrillekGame.h  TrillekScheduler.h  atomic-map.hpp  atomic-queue.hpp  bitmap.hpp  component.hpp  container.hpp  logging.hpp  map-array.hpp  opengl.hpp  order-queue.hpp  order.hpp  os-event.hpp  os.hpp  property.hpp  thething.hpp  transform.hpp  trillek-allocator.hpp  trillek-game.hpp  trillek-scheduler.hpp  trillek.hpp  type-id.hpp  user-command-queue.hpp  user-command.hpp
include/components/: Renderable.hpp  component-adder.hpp  component-container.hpp  component-enum.hpp  component-factory.hpp  component-templates.hpp  component.hpp  renderable.hpp  shared-component.hpp  system-component-value.hpp  system-component.hpp
include/composites/: network-node.hpp
include/controllers/network/: ESIGN-signature.hpp  VMAC-stream-hasher.hpp  authentication-handler.hpp  connection-data.hpp  crypto.hpp  frame-request.hpp  io-poller.hpp  message-templates.hpp  message.hpp  network-controller-templates.hpp  network-controller.hpp  network.hpp  packet-handler-templates.hpp  packet-handler.hpp  test-packet-handler.hpp
include/graphics/: animation.hpp  camera.hpp  graphics-base.hpp  graphics-container.hpp  light.hpp  material.hpp  render-layer.hpp  render-list.hpp  renderable.hpp  shader.hpp  six-dof-camera.hpp  texture.hpp
include/lau/: lua_transform.hpp
include/lua/: lua_force.hpp  lua_glm.hpp  lua_velocity.hpp
include/physics/: capsule-shape.hpp  collidable.hpp
include/resources/: MD5Mesh.hpp  Material.hpp  Mesh.hpp  Shader.hpp  TextFile.h  material.hpp  md5anim.hpp  md5mesh.hpp  mesh.hpp  obj.hpp  pixel-buffer.hpp  shader.hpp  text-file.hpp  transform.hpp
include/systems/: Graphics.hpp  ResourceSystem.h  async-data.hpp  component-factory.hpp  dispatcher.hpp  entity-system.hpp  fake-system.hpp  graphics.hpp  json-parser.hpp  lua-system.hpp  meta-engine-system.hpp  physics.hpp  resource-system.hpp  rewindable-map.hpp  sound-system.hpp  system-base.hpp  transform-system.hpp  vcomputer-system.hpp
include/util/: Checksum.hpp  Compression.hpp  UtilType.hpp  checksum.hpp  compression.hpp  imageloader.hpp  json-parser.hpp  utiltype.hpp
libs/glfw3/: CMakeLists.txt
main/: Client_main.cpp  Server_main.cpp  Standalone_main.cpp  Tests_main.cpp  client-main.cpp  main.cpp  server-main.cpp  standalone-main.cpp  tests-main.cpp
modules/: BuildNetPort.cmake  Buildlibkqueue.cmake  FindALURE.cmake  FindBullet.cmake  FindCrypto++.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindGTEST.cmake  FindLuaWrapper.cmake  FindOpenAL.cmake  FindRakNet.cmake  FindRapidJSON.cmake
src/: OS.cpp  TrillekGame.cpp  TrillekScheduler.cpp  logging.cpp  main.cpp  main.cxx  opengl.cpp  os.cpp  transform.cpp  trillek-game.cpp  trillek-scheduler.cpp
src/components/: Renderable.cpp  component-factory.cpp  component.cpp  renderable.cpp
src/composites/: network-node.cpp
src/controllers/network/: VMAC-stream-hasher.cpp  authentication-handler.cpp  connection-data.cpp  crypto.cpp  frame-request.cpp  message-templates.cpp  message.cpp  network-controller-templates.cpp  network-controller.cpp  test-packet-handler.cpp
src/graphics/: animation.cpp  light.cpp  material.cpp  render-layer.cpp  render-list.cpp  renderable.cpp  shader.cpp  six-dof-camera.cpp  texture.cpp
src/lau/: lua_transform.cpp
src/loaders/: PNG.cpp  png.cpp
src/lua/: lua_luasys.cpp  lua_os.cpp  lua_physics.cpp  lua_transform.cpp
src/physics/: capsule-shape.cpp  collidable.cpp
src/resources/: MD5Mesh.cpp  Material.cpp  Mesh.cpp  Shader.cpp  material.cpp  md5anim.cpp  md5mesh.cpp  mesh.cpp  obj.cpp  pixel-buffer.cpp  shader.cpp  transform.cpp
src/systems/: Graphics.cpp  ResourceSystem.cpp  component-factory.cpp  entity-system-registration.cpp  entity-system.cpp  graphics.cpp  json-parser-registration.cpp  json-parser.cpp  lua-registration.cpp  lua-system.cpp  meta-engine-system.cpp  physics.cpp  registration.cpp  resource-system-registration.cpp  resource-system.cpp  sound-system.cpp  transform-system.cpp  transform_system.cpp  vcomputer-system.cpp
src/util/: Checksum.cpp  Compression.cpp  Util.cpp  checksum.cpp  compression.cpp  json-parser.cpp  util.cpp
tests/: CMakeLists.txt  main.cpp
tests/modules/: FindGTEST.cmake  SetCompilerFlags.cmake
tests/src/: logging-test.cpp  rtti-test.cpp
tests/src/resources/: transform.cpp
tests/src/systems/: ResourceSystem.cpp
tests/tests/: AtomicMapTest.h  AtomicQueueTest.h  CryptoTest.h  DecompressorTest.h  ESIGN_SignatureTest.h  ImageLoaderTest.h  MapArrayTest.h  NetworkControllerTest.h  PropertyTest.h  ResourceSystemTest.h  UtilityTest.h  VMAC_StreamHasherTest.h  bitmap-test.hpp  rewindable-map-test.hpp  transform-system-test.h
