CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(Core)

# Exported to Parent Scope
SET(TCC_ENGINE_INCLUDE_DIRS
	${TCC_ENGINE_CORE_INCLUDE_DIRS}
	PARENT_SCOPE
	)

SET(TCC_ENGINE_INCLUDES
	${TCC_ENGINE_CORE_INCLUDES}
	PARENT_SCOPE
	)

SET(TCC_ENGINE_SRC
	${TCC_ENGINE_CORE_SOURCES}
	PARENT_SCOPE
	)
	